<resources>
    <string name="app_name">Share Expenses</string>
    <string name="incomeA">Income A:</string>
    <string name="income_b">Income B:</string>
    <string name="total_expense">Total Expense</string>
    <string name="a_should_pay">A should pay:</string>
    <string name="b_should_pay">B should pay:</string>
    <string name="calculate">CALCULATE</string>
    <string name="clear">Clear</string>
</resources>
