<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_expense_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dk.adamino.shareexpenses.ShareExpensesMain">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/incomeA"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/txtIncomeA"
        android:layout_alignBottom="@+id/txtIncomeA"
        android:layout_toEndOf="@+id/txtIncomeB" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/totalExpense"
        android:textAlignment="center"
        android:layout_below="@+id/txtTotalExpense"
        android:layout_alignStart="@+id/txtTotalExpense" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none|textPersonName"
        android:text="@string/total_expense"
        android:ems="10"
        android:id="@+id/txtTotalExpense"
        android:textAlignment="center"
        android:layout_below="@+id/txtIncomeB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:focusable="false"
        android:textColor="#8b4513" />

    <Button
        android:text="@string/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnCalculate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#51b46d"
        android:textColor="#fff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/income_b"
        android:ems="5"
        android:id="@+id/txtIncomeB"
        android:textAlignment="center"
        android:textColor="#e15258"
        android:clickable="false"
        android:layout_below="@+id/incomeA"
        android:layout_alignStart="@+id/txtTotalExpense"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/incomeB"
        android:textAlignment="center"
        android:layout_below="@+id/incomeA"
        android:layout_toEndOf="@+id/txtIncomeB"/>

    <EditText
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/incomeA"
        android:ems="5"
        android:layout_marginTop="27dp"
        android:id="@+id/txtIncomeA"
        android:textAlignment="center"
        android:textColor="#51b46d"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtIncomeB"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/b_should_pay"
        android:ems="6"
        android:id="@+id/txtShouldPayB"
        android:textAlignment="center"
        android:focusable="false"
        android:textColor="#e15258"
        android:layout_below="@+id/expenseA"
        android:layout_alignStart="@+id/txtShouldPayA" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/expenseA"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/txtShouldPayA"
        android:layout_alignBottom="@+id/txtShouldPayA"
        android:layout_toEndOf="@+id/txtShouldPayA"
        android:textStyle="bold"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/expenseB"
        android:textAlignment="center"
        android:layout_below="@+id/expenseA"
        android:layout_toEndOf="@+id/txtShouldPayA"
        android:textStyle="bold"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/a_should_pay"
        android:ems="6"
        android:id="@+id/txtShouldPayA"
        android:textAlignment="center"
        android:focusable="false"
        android:textColor="#51b46d"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/totalExpense"
        android:layout_toStartOf="@+id/incomeB" />

</RelativeLayout>
